--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   weather: ^3.1.1
   flutter_bloc: ^8.1.4
   equatable: ^2.0.5
+  build_runner: ^2.1.5
+  json_annotation: ^4.8.1
 
 dev_dependencies:
   flutter_test:
@@ -53,6 +55,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  json_serializable: ^6.7.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -70,6 +73,8 @@ flutter:
   assets:
      - lib/assets/images/
      - lib/assets/icons/
+     - lib/assets/weather/
+
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
